set background color and border-width to fix some minor bugs on firefox

--- a/core-library/component-styling/select/_select-component.scss
+++ b/core-library/component-styling/select/_select-component.scss
@@ -86,8 +86,10 @@ $selectors: 'lib-select';
 		line-height: 24px;
 		color: var(--text);
 		border-radius: token-size.$border-radius;
+		background-color: white;
 		// showing but not
 		border-color: var(--border);
+		border-width: 1px;
 		width: 100%;
 		-webkit-appearance: none;
 		-moz-appearance: none;
